unpackaged/main/default/objects/Account_Territory_Assignment__c/Account_Territory_Assignment__c.object-meta.xml
<CustomObject>
    <description>This record the linkage of an account to a territory when the account is assigned.</description>
    <label>Territory Account Assignment</label>
    <nameField>
        <displayFormat>ATA-{0000}</displayFormat>
        <label>Account Territory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Account Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>