unpackaged/main/default/objects/Account_Territory_Assignment__c/fields/Assigned_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account__c</fullName>
    <description>This is the account that is assigned to the territory</description>
    <inlineHelpText>This is the account that is assigned to the territory</inlineHelpText>
    <label>Assigned Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Territory Account Assignments</relationshipLabel>
    <relationshipName>Territory_Account_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>