unpackaged/main/default/objects/Account_Territory_Assignment__c/fields/Assigned_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Territory_ID__c</fullName>
    <label>Assigned Territory</label>
    <length>18</length>
    <type>Text</type>
</CustomField>