unpackaged/main/default/objects/Account_Territory_Assignment__c/fields/Territory_Model__c.field-meta.xml
<CustomField>
    <fullName>Territory_Model__c</fullName>
    <description>The model the territory is in</description>
    <inlineHelpText>The model the territory is in</inlineHelpText>
    <label>Territory Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>