unpackaged/main/default/objects/Account_Territory_Assignment__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <description>Name of the currently assigned territory</description>
    <inlineHelpText>Name of the currently assigned territory</inlineHelpText>
    <label>Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>